fixed img height, not sure how it looks like on mobile

--- a/compsocsite/static/css/desktop.css
+++ b/compsocsite/static/css/desktop.css
@@ -8,10 +8,3 @@ body {
 	padding-right: 5px;
 	font-size: medium;
 }
-img.item {
-	width: 40px;
-}
-
-img.item:hover {
-	width: 80px;
-}
