--- a/compsocsite/static/css/mobile.css
+++ b/compsocsite/static/css/mobile.css
@@ -10,7 +10,16 @@ body {
 }
 
 img.item {
-	width: 80px;
+	height: 40px;
+	width:auto;
+	max-width:100%;
+	
+}
+
+img.item:hover {
+	height: 40px;
+	width:auto;
+	max-width:100%;
 }
 
 input[type=text], input[type=url], input[type=email], input[type=password], input[type=tel] {
